[package]
name = "jelly-stats"
description = "Prometheus metrics from your letsjelly.com inboxes"
version = "0.2.0"
edition = "2024"
authors = ["MMK21Hub <mish@slevel.xyz>"]
license = "MIT"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenv = "0.15.0"
humantime = "2.3.0"
log = "0.4.33"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.8", features = ["serde"] }
